--- a/dashboard.html
+++ b/dashboard.html
@@ -12,11 +12,11 @@
 <body>
     <div id="greeting-bar"></div>
     <div class="button-grid">
-        <div class="button-card" id="finance" data-tooltip = "Record Your Income and Expense" >
+        <div class="button-card" id="finance" data-tooltip = "Record Your Income and Expense" data-page = "budget.html">
             <i class='bx bx-circle-three-quarter' ></i>
             <span>Finance</span>
         </div>
-        <div class="button-card" id="planning" data-tooltip = "Check Your Current Foundation Plan or Start Foundation Plan for Your Own Today!">
+        <div class="button-card" id="planning" data-tooltip = "Check Your Current Foundation Plan or Start Foundation Plan for Your Own Today!" data-page = "SavingPlan.html">
             <i class='bx bxs-bank' ></i>
             <span>Planning</span>
         </div>
