--- a/SavingPlan.html
+++ b/SavingPlan.html
@@ -24,7 +24,7 @@
 <button id="add-row-btn">New Plan</button>
 
 
-<script src="SavingPlanFunc.js"></script>
+<script src="SavingPlan2.js"></script>
 
 </body>
 </html>
