--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="dashboardstyle.css">
+    <link rel="stylesheet" href="dashboardStyle.css">
     <link
     rel = "stylesheet"
     href = 'https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' />
